# confluent-avro-py

./: .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.py
avrokafka/: __init__.py  __version__.py  avrolib.py  codec.py  exceptions.py  schemaregistry.py  serde.py
avrokafka/schema_registry/: __init__.py  auth.py  client_http.py  errors.py
confluent_avro/: __init__.py  avrolib.py  exceptions.py  serde.py
confluent_avro/schema_registry/: __init__.py  client_http.py  errors.py
examples/: README.md  consumer.py  docker-compose.yml  producer.py  telecom_italia_data-key.json  telecom_italia_data-value.json
tests/: conftest.py  test_avrolib.py  test_schema_registry.py  test_serde.py
tests/fixutres/: employee.avsc  employees.json
